--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top d-flex align-items-cente">
-    <img style="width: 70px; height: 70px; margin-left: 5px;" class="logosa" src="/assets/img/gallery/La Boom (2) (1).png" alt="">
+    <img style="width: 70px; height: 70px; margin-left: 5px;" class="logosa" src="https://ibb.co/jGt1KdG" alt="">
     <div class="container-fluid container-xl d-flex align-items-center justify-content-lg-between">
       <h1 class="logo me-auto me-lg-0"><a href="index.html">Ti Amu</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
