--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
-      <a href="/login.html" class="book-a-table-btn scrollto d-none d-lg-flex">Login / Sign Up</a>
+      <a href="login.html" class="book-a-table-btn scrollto d-none d-lg-flex">Login / Sign Up</a>
 
 
     </div>
