--- a/login.html
+++ b/login.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Sign Up/Sign In</title>
-  <link rel="icon" href="/La Boom (2) (1).png">
-  <link rel="stylesheet" href="/assets/css/login.css">
+  <link rel="icon" href="assets/img/gallery/La Boom (2) (1).png">
+  <link rel="stylesheet" href="assets/css/login.css">
 
 </head>
 <body>
